--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>GALLERY</title>
-</head>
-<body>
-	<section id="stage"></section>
-	<script src="js/UInterface.js"></script>
-	<script src="js/Gallery.js"></script>
-	<script src="js/Entities.js"></script>	
-	<script src="js/Utilities.js" ></script>
-</body>
+<html lang="es">
+	<head>
+		<meta charset="UTF-8">
+		<title>Welcome to gallery</title>
+	</head>
+	<body>
+		<section id="stage"></section>
+		<!-- SCRIPT -->
+		<script src="js/UInterface.js"></script>
+		<script src="js/Gallery.js"></script>
+		<script src="js/Entities.js"></script>	
+		<script src="js/Utilities.js" ></script>
+	</body>
 </html>
